# node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.openai_proxy  Dockerfile.web2_style  README.md  config.example.toml  config.toml  rust-toolchain.toml
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  types.rs  utils.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: config.rs  lib.rs  raft.rs
crates/container/: Cargo.toml
crates/container/dstack/: Cargo.toml
crates/container/dstack/examples/: compose_test.rs  docker-compose.yaml  teepod.rs
crates/container/dstack/src/: compose.rs  lib.rs  types.rs
crates/container/examples/: start_docker.rs
crates/container/src/: config.rs  cvm.rs  lib.rs
crates/container/src/docker/: mod.rs  utils.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/engine/: Cargo.toml  README.md
crates/executor/engine/examples/: test.rs
crates/executor/engine/src/: event.rs  lib.rs  out_events.rs  request_response.rs  service.rs
crates/executor/src/: bridge.rs  config.rs  container.rs  core.rs  error.rs  lib.rs  metadata.rs  state.rs
crates/framework/: Cargo.toml  README.md
crates/framework/examples/: web2_style.rs
crates/framework/scripts/: test_web2_style.sh
crates/framework/src/: adapters.rs  context.rs  database.rs  errors.rs  http.rs  lib.rs  macros.rs  middleware.rs  model.rs  prelude.rs  routes.rs  server.rs  state.rs  state_serialize.rs
crates/gateway/: Cargo.toml  README.md
crates/gateway/src/: admin.rs  api_key_store.rs  gateway.rs  lib.rs  main.rs
crates/gateway/tests/: test_gateway.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: api.rs  config.rs  lib.rs  pool.rs
crates/network/: Cargo.toml
crates/network/src/: config.rs  discovery.rs  lib.rs  protocol.rs
crates/node/: Cargo.toml
crates/node-rest/: Cargo.toml  README.md
crates/node-rest/examples/: test_rest_api.rs
crates/node-rest/src/: admin.rs  api_key_store.rs  lib.rs  mock_node_info.json  rest_api.rs
crates/node/src/: main.rs
crates/openai-proxy/: Cargo.toml
crates/openai-proxy/src/: main.rs
crates/primitives/ethereum/: Cargo.toml
crates/primitives/ethereum/src/: lib.rs  receipt.rs  trie.rs
crates/primitives/poc/: Cargo.toml
crates/primitives/poc/src/: bls.rs  lib.rs
crates/primitives/pom/: Cargo.toml
crates/primitives/pom/contracts/: MORPHIC.abi  compile.sh  morphic.sol
crates/primitives/pom/src/: call_tree.rs  config.rs  event_handler.rs  l1_helper.rs  lib.rs  model.rs
crates/primitives/pom/tests/: call_tree_test.rs  l1_helper_test.rs
crates/sdk/: Cargo.toml
crates/sdk/examples/: simple_client.rs
crates/sdk/src/: client.rs  error.rs  lib.rs  macro.rs  module.rs  transaction.rs
crates/state/: Cargo.toml
crates/state/src/: config.rs  db.rs  diff.rs  lib.rs
crates/state/src/db/: sqlite.rs
crates/state/src/db/migrations/: 01_initial_schema.sql
scripts/: run_node.sh  test_node_workflow.sh  test_openai_proxy.sh
