[package]
name = "mp-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
async-trait = {workspace = true}
tokio = { workspace = true, features = ["full"] }
async-raft = {workspace = true}
ethereum-types = { workspace = true, features = ["rlp", "codec", "scale-info"] }
http = "0.2.12"
sha1 = "0.10"
percent-encoding = "2.1.0"