[package]
name = "mp-consensus"
version = "0.1.0"
edition.workspace = true

[dependencies]
mp-common = { workspace = true }

async-raft = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
uuid = { version = "1.3", features = ["v4", "serde"] }
