[package]
name = "mp-container"
version = "0.1.0"
edition.workspace = true

[dependencies]
mp-common = { workspace = true }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bollard = "0.18.1"
futures = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
base64 = "0.13"
reqwest = { version = "0.11", features = ["json"] }
rand = { workspace = true }
dstack = { path = "dstack" }
sha1 = "0.10"
percent-encoding = "2.1.0"
hex = "0.4.3"