[package]
name = "mp-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.1", features = ["full"] }
axum = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time"] }
base64 = "0.21"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
time = { version = "0.3", features = ["serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
httparse = "1.8"
mp-derive = { workspace = true }
erased-serde = "0.3"
hyper = { version = "0.14", features = ["full"] }

[[example]]
name = "web2_style"
path = "examples/web2_style.rs"

[[example]]
name = "middleware_example"
path = "examples/middleware_example.rs"
