[package]
name = "mp-gateway"
version = "0.1.0"
edition.workspace = true 

[dependencies]
mp-sdk = { workspace = true }
mp-common = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.29", features = ["bundled"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }
toml = "0.7"
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
config = { workspace = true }
once_cell = "1.18.0" 
primitive-types = "0.12.2" # Updated version

[dev-dependencies]
reqwest = "0.12.13"