[package]
name = "mp-node-rest"
version = "0.1.0"
edition.workspace = true
description = "Integrated RESTful API for mp Node"

[dependencies]
mp-executor = { workspace = true }
mp-mempool = { workspace = true }
mp-common = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
once_cell = "1.8"
base64 = "0.13"
hex = "0.4.3"
chrono = { workspace = true }
mp-poc = { workspace = true }
dstack = { workspace = true }
primitive-types = { workspace = true }
serde-human-bytes = "0.1.1"

[dev-dependencies]
tracing-subscriber = { workspace = true }