[package]
name = "mp-node"
version = "0.1.0"
edition.workspace = true
description.workspace = true

[dependencies]
tracing-subscriber = {workspace = true, features = ["env-filter"]}
tracing = {workspace = true}
tokio = {workspace = true}
ethereum = { workspace = true }
ethereum-types = { workspace = true }
mp-common = { workspace = true }
mp-network = { workspace = true }
mp-mempool = { workspace = true }
mp-state = { workspace = true }
mp-consensus = { workspace = true }
mp-executor = { workspace = true }
mp-container = { workspace = true }
mp-node-rest = { workspace = true }
mp-sdk = { workspace = true }
mp-poc = {workspace = true}
# mp-pom = {workspace = true}
# mp-ethereum = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true, features = ["derive"]}
serde = {workspace = true}
uuid ={ workspace = true}
config = {workspace = true}
chrono = {workspace = true}
dotenv = "0.15"
hex = "0.4.3"
dstack = {workspace = true}