[package]
name = "openai-proxy"
version = "0.1.0"
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "1"
futures-util = "0.3"
bytes = "1"
reqwest = { version = "0.12", features = ["json"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.11", features = ["tokio"] }
futures = "0.3"
http-body = "1.0.1"
tokio-util = "0.7"