[package]
name = "mp-state"
version = "0.1.0"
edition.workspace = true

[dependencies]
mp-common = { workspace = true }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1"
rusqlite = { version = "0.29" }
async-trait = { workspace = true }
