[package]
name = "mp-executor-engine"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
thiserror ={ workspace = true }
async-channel = { workspace = true }
codec = { workspace = true, features = ["derive"]}
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.18.0"
