[package]
name = "mp-ethereum"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
eth_trie = "0.4.0"
ethereum = { workspace = true }
ethereum-types = { workspace = true, features = ["rlp", "codec", "scale-info"] }
hash-db = "0.16"
hex-literal = "0.4.1"
lazy_static = "1.4"
rlp = { workspace = true }
scale-codec = { workspace = true, optional = true }
scale-info = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sha3 = { version = "0.10.0", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }

[features]
default = ["with-codec", "with-serde"]

with-codec = [
	"scale-codec",
	"scale-info",
	"ethereum-types/codec",
	"ethereum/with-codec",
]
with-serde = [
	"dep:serde",
	"ethereum-types/serialize",
	"ethereum/with-serde",
]
